Added simple multithreading and fading led
Changed structure of project to follow this rules:
 - all source files will be stored in src/ directory,
 - all header files will be stored in inc/ directory,
 - all upcoming modules will have their own .c and .h file in corresponding
   directory,
 - main.c will now hold threads initialization.
Added new functionalities:
 - added blinkThread responsible for blinking LED1,
 - added pwmThread responsible for fading LED0.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,10 @@ set(BOARD nrf52dk_nrf52832)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(CE_recruitment)
 
-target_sources(app PRIVATE src/main.c)
+include_directories(inc)
+
+target_sources(app PRIVATE
+		src/main.c
+		src/blinkThread.c
+		src/pwmThread.c
+)
