--- a/prj.conf
+++ b/prj.conf
@@ -1,4 +1,23 @@
+# blinking LED
 CONFIG_GPIO=y
+
+# fading LED
 CONFIG_PWM=y
+
+# LOG functions
 CONFIG_LOG=y
+
+# printk()
 CONFIG_PRINTK=y
+
+# using I2C bus on MCU (used for SSD1306)
+CONFIG_I2C=y
+
+# using SSD1306 itself
+CONFIG_DISPLAY=y
+CONFIG_SSD1306=y
+CONFIG_SSD1306_DEFAULT=y
+CONFIG_SSD1306_DEFAULT_CONTRAST=32
+CONFIG_CHARACTER_FRAMEBUFFER=y
+
+CONFIG_HEAP_MEM_POOL_SIZE=2048
