Refactored thread responsible for displaying data
pwm capabilities on LED0 now are kept inside fadingLed.c/h
pwmThread has changed to displayThread
Inside displayThread there will be used functions of fadingLed
and oledDisplay

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(inc)
 target_sources(app PRIVATE
 		src/main.c
 		src/blinkThread.c
-		src/pwmThread.c
+		src/displayThread.c
 		src/oledDisplay.c
+		src/fadingLed.c
 )
