Removed blinkThread init and from build process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(inc)
 
 target_sources(app PRIVATE
 		src/main.c
-		src/blinkThread.c
+#		src/blinkThread.c
 		src/displayThread.c
 		src/oledDisplay.c
 		src/fadingLed.c
