Added official vl6180x API prepared by STM (OEM)
Currently API is not ported for usage by zephyr RTOS API, but it
will be updated in upcoming commits. In current version the sensor
API is building but it's not linked into binary.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.20.0)
 set(BOARD nrf52dk_nrf52832)
 
+add_compile_options(-Wall)
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(CE_recruitment)
 
 include_directories(inc)
+include_directories(vl6180_API/inc)
 
 target_sources(app PRIVATE
 		src/main.c
@@ -13,4 +16,5 @@ target_sources(app PRIVATE
 		src/oledDisplay.c
 		src/fadingLed.c
 		src/measThread.c
+		vl6180_API/src/vl6180x_api.c
 )
