Aligned vl6180x api for current project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(CE_recruitment)
 
 include_directories(inc)
 include_directories(vl6180_API/inc)
+include_directories(vl6180_API/cci-i2c)
 
 target_sources(app PRIVATE
 		src/main.c
@@ -17,4 +18,5 @@ target_sources(app PRIVATE
 		src/fadingLed.c
 		src/measThread.c
 		vl6180_API/src/vl6180x_api.c
+		vl6180_API/cci-i2c/vl6180x_i2c.c
 )
