Added simple usage of vl6180x API
Current state of source files is just to demonstrate on single thread
if API works and it will change in upcoming commits.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ target_sources(app PRIVATE
 		src/measThread.c
 		vl6180_API/src/vl6180x_api.c
 		vl6180_API/cci-i2c/vl6180x_i2c.c
+		src/rangeMeter.c
 )
