--- a/prj.conf
+++ b/prj.conf
@@ -20,5 +20,6 @@ CONFIG_SSD1306=y
 CONFIG_SSD1306_DEFAULT=y
 CONFIG_SSD1306_DEFAULT_CONTRAST=32
 CONFIG_CHARACTER_FRAMEBUFFER=y
+CONFIG_CBPRINTF_LIBC_SUBSTS=y
 
 CONFIG_HEAP_MEM_POOL_SIZE=2048
